Correct color-contrast and fonts sizes

--- a/sass/sections/_contact.scss
+++ b/sass/sections/_contact.scss
@@ -5,9 +5,6 @@
     &__content {
         text-align: center;
     }
-    &__text .first-letter {
-        text-shadow: 0 0 15px black;
-    }
 
     &__email {
         font-weight: 700;
