--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -9,5 +9,6 @@
 
     &__text span {
         color: $purple-primary;
+        text-shadow: 0 0 8px black;
     }
 }
