--- a/sass/sections/_works.scss
+++ b/sass/sections/_works.scss
@@ -134,6 +134,10 @@
 
     &__description {
         font-size: 16px;
+
+        @media (max-width: 991px) {
+            font-size: 12px;
+        }
     }
 
     &__icon {
