--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,4 +70,9 @@ body {
     color: $purple-primary;
     font-size: larger;
     font-weight: 700;
+
+    &--contact {
+        color: $purple-light;
+        text-shadow: 0 0 15px black;
+    }
 }
